--- a/index.html
+++ b/index.html
@@ -57,11 +57,24 @@
       async function predict() {
           // predict can take in an image, video or canvas html element
           const prediction = await model.predict(webcam.canvas);
-          for (let i = 0; i < maxPredictions; i++) {
-              const classPrediction =
-                  prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-              labelContainer.childNodes[i].innerHTML = classPrediction;
+          if(prediction[0].probability.toFixed(2)==1.00){
+            labelContainer.childNodes[0].innerHTML = "주먹"
+          } 
+          else if (prediction[1].probability.toFixed(2)==1.00) {
+            labelContainer.childNodes[i].innerHTML = "가위"
           }
+          else if (prediction[0].probability.toFixed(2)==1.00) {
+            labelContainer.childNodes[i].innerHTML = "보"
+          }
+          else {
+            labelContainer.childNodes[i].innerHTML = "가위,바위,보 중 하나를 내세요."
+          }
+
+          // for (let i = 0; i < maxPredictions; i++) {
+          //     const classPrediction =
+          //         prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+          //     labelContainer.childNodes[i].innerHTML = classPrediction;
+          // }
       }
   </script>
 
