--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
           const prediction = await model.predict(webcam.canvas);
           if(prediction[0].probability.toFixed(2)==1.00){
             labelContainer.childNodes[0].innerHTML = "주먹"
-          } 
-          else if (prediction[1].probability.toFixed(2)==1.00) {
-            labelContainer.childNodes[i].innerHTML = "가위"
           }
-          else if (prediction[0].probability.toFixed(2)==1.00) {
-            labelContainer.childNodes[i].innerHTML = "보"
+          else if (prediction[1].probability.toFixed(2)==1.00) {
+            labelContainer.childNodes[0].innerHTML = "가위"
+          }
+          else if (prediction[2].probability.toFixed(2)==1.00) {
+            labelContainer.childNodes[0].innerHTML = "보"
           }
           else {
-            labelContainer.childNodes[i].innerHTML = "가위,바위,보 중 하나를 내세요."
+            labelContainer.childNodes[0].innerHTML = "가위,바위,보 중 하나를 내세요."
           }
 
           // for (let i = 0; i < maxPredictions; i++) {
