--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
       async function predict() {
           // predict can take in an image, video or canvas html element
           const prediction = await model.predict(webcam.canvas);
-          if(prediction[0].probability.toFixed(2)==1.00){
+          if(prediction[0].probability.toFixed(2)>=0.90){
             labelContainer.childNodes[0].innerHTML = "주먹";
+            <img src = "바위.jpg" width='100' height='100'>
           }
-          else if (prediction[1].probability.toFixed(2)==1.00) {
+          else if (prediction[1].probability.toFixed(2)>=0.90) {
             labelContainer.childNodes[0].innerHTML = "가위";
+            <img src = "가위.jpg" width='100' height='100'>
           }
-          else if (prediction[2].probability.toFixed(2)==1.00) {
+          else if (prediction[2].probability.toFixed(2)>=0.90) {
             labelContainer.childNodes[0].innerHTML = "보";
           }
+            <img src = "보.jpg" width='100' height='100'>
           else {
             labelContainer.childNodes[0].innerHTML = "가위,바위,보 중 하나를 내세요.";
           }
